# webbserver

./: .gitignore  CMakeLists.txt  README.md
config/: ServerProperties.md  server.properties
include/: clientConnection.h  config.h  configProperties.h  configReader.h  hashmap.h  http.h  queue.h  requestHandler.h  socket.h  staticContentServer.h  terminal.h  threadpool.h  webserver.h
resources/static/: index.html
src/: clientConnection.c  configReader.c  hashmap.c  http.c  main.c  queue.c  requestHandler.c  socket.c  staticContentServer.c  terminal.c  threadpool.c  webserver.c
test/: CMakeLists.txt  configReaderTest.cc
